data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_329.wast
;; 10. **Mixed Structured Control Instructions with `br` to Outermost and Unreachable in Inner Structures:**    - Combine `block`, `loop`, and `if`, where a `br` instruction within an innermost structure targets the outermost block, with `unreachable` within inner structures.    - Checks that `br` across different structures respects label indexing and navigation, avoiding unreachable code in mixed contexts.

(assert_invalid
  (module
    (func $mixed-structured-control
      (block $outermost
        (loop $inner-loop
          (if (i32.const 1)
            (then
              (br 1)
              unreachable
            )
          )
        )
      )
    )
  )
  "type mismatch"
)